[tool.poetry]
name = "exp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash-table = "^4.10.1"
pandas = "^1.1.2"
plotly = "^4.10.0"
dash = "^1.16.0"
dash-core-components = "^1.12.0"
dash-html-components = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
